--- a/Exercícios/EX022/fundo006.html
+++ b/Exercícios/EX022/fundo006.html
@@ -3,18 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo fixo de tela</title>
     <style>
         body{
-            background-color: black;
+            height: 100vh;
+            /*background-color: black;
             background-image: url('imagens/wallpaper002.jpg');
             background-position: center center;
             background-repeat: no-repeat;
-            background-size: cover;        
+            background-size: cover;     
+            background-attachment: fixed;
+            
+            Shorthand - background
+               color > image > position > repeat > [size] > attachment
+            */
+
+            background: black url('imagens/wallpaper002.jpg') center center no-repeat fixed;
+            background-size: cover;
         }
         main{
             background-color: white;
-            width: 400PX;
+            max-width: 400PX;
             padding: 10PX;
             margin: auto;
             border: 1px solid darkblue;
@@ -25,6 +34,18 @@
 <body>
     <main>
         <h1>Teste de imagem de fundo</h1>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Expedita eaque maiores ex odio incidunt aliquam animi eos earum nostrum, cum dignissimos sed, nulla hic exercitationem. Perferendis quia dolores molestiae dolorum!
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam saepe libero corporis placeat quo eligendi harum accusamus assumenda, error quam tempora numquam consequatur soluta odio asperiores, dolor itaque sed iste.
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Mollitia similique molestias distinctio doloribus est tempora nemo iure, dolorem optio modi, consectetur cumque? Quaerat aut veritatis, incidunt quos atque commodi eius?
+        </p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Expedita eaque maiores ex odio incidunt aliquam animi eos earum nostrum, cum dignissimos sed, nulla hic exercitationem. Perferendis quia dolores molestiae dolorum!
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam saepe libero corporis placeat quo eligendi harum accusamus assumenda, error quam tempora numquam consequatur soluta odio asperiores, dolor itaque sed iste.
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Mollitia similique molestias distinctio doloribus est tempora nemo iure, dolorem optio modi, consectetur cumque? Quaerat aut veritatis, incidunt quos atque commodi eius?
+        </p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Expedita eaque maiores ex odio incidunt aliquam animi eos earum nostrum, cum dignissimos sed, nulla hic exercitationem. Perferendis quia dolores molestiae dolorum!
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam saepe libero corporis placeat quo eligendi harum accusamus assumenda, error quam tempora numquam consequatur soluta odio asperiores, dolor itaque sed iste.
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Mollitia similique molestias distinctio doloribus est tempora nemo iure, dolorem optio modi, consectetur cumque? Quaerat aut veritatis, incidunt quos atque commodi eius?
+        </p>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Expedita eaque maiores ex odio incidunt aliquam animi eos earum nostrum, cum dignissimos sed, nulla hic exercitationem. Perferendis quia dolores molestiae dolorum!
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam saepe libero corporis placeat quo eligendi harum accusamus assumenda, error quam tempora numquam consequatur soluta odio asperiores, dolor itaque sed iste.
         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Mollitia similique molestias distinctio doloribus est tempora nemo iure, dolorem optio modi, consectetur cumque? Quaerat aut veritatis, incidunt quos atque commodi eius?
