--- a/DESAFIOS PROPOSTOS/Desafio012/index.html
+++ b/DESAFIOS PROPOSTOS/Desafio012/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cordel Moderno</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="estilo/style.css">
 </head>
 <body>
     <header>
@@ -12,7 +12,7 @@
             Cordel Moderno
         </h1>
         <p>
-            Por <a href="https://www.recantodasletras.com.br/poesias/3186743">Milton Duarte</a>
+            Por <a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank">Milton Duarte</a>
         </p>
     </header>
 
