--- a/Exercícios/EX023/tabela002.html
+++ b/Exercícios/EX023/tabela002.html
@@ -30,6 +30,10 @@
             background-color: gray;
             color: white;
         }
+
+        tbody > tr:nth-child(2n) { 
+            background-color: lightgrey;
+        }
         td.num {
             text-align: right;
         }
