--- a/Exercícios/EX023/tabela002.html
+++ b/Exercícios/EX023/tabela002.html
@@ -12,6 +12,7 @@
         table {
             width: 500px;
             border-collapse: collapse;
+            position: relative;
         }
 
         td, th {
@@ -27,8 +28,14 @@
         }
 
         thead, tfoot {
-            background-color: gray;
+            background-color:#383838;
             color: white;
+        }
+
+        thead > tr > th {
+            position: sticky;
+            top: -1px;
+            background-color: #383838;
         }
 
         tbody > tr:nth-child(2n) { 
@@ -177,5 +184,40 @@
             </tr>
         </tfoot>
     </table>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, maxime. Delectus nemo fuga nobis. Sit, architecto. Architecto, impedit! Iusto, voluptatibus? Similique quibusdam ipsa quisquam saepe animi dicta adipisci sint delectus.
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur tenetur amet mollitia sunt fuga magni itaque quo corporis unde at voluptates necessitatibus, ipsam quidem obcaecati in dignissimos, temporibus recusandae eius.
+    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ducimus architecto deserunt nobis eos ab placeat cumque ad at, tenetur illo facilis saepe soluta. Eveniet explicabo, omnis voluptates vitae id nihil?
+    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Exercitationem impedit minus autem maiores assumenda fugiat doloribus nemo aut, atque, quasi expedita. Totam aliquam incidunt repellendus nisi illo possimus exercitationem molestiae!
+    </p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, maxime. Delectus nemo fuga nobis. Sit, architecto. Architecto, impedit! Iusto, voluptatibus? Similique quibusdam ipsa quisquam saepe animi dicta adipisci sint delectus.
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur tenetur amet mollitia sunt fuga magni itaque quo corporis unde at voluptates necessitatibus, ipsam quidem obcaecati in dignissimos, temporibus recusandae eius.
+    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ducimus architecto deserunt nobis eos ab placeat cumque ad at, tenetur illo facilis saepe soluta. Eveniet explicabo, omnis voluptates vitae id nihil?
+    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Exercitationem impedit minus autem maiores assumenda fugiat doloribus nemo aut, atque, quasi expedita. Totam aliquam incidunt repellendus nisi illo possimus exercitationem molestiae!
+    </p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, maxime. Delectus nemo fuga nobis. Sit, architecto. Architecto, impedit! Iusto, voluptatibus? Similique quibusdam ipsa quisquam saepe animi dicta adipisci sint delectus.
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur tenetur amet mollitia sunt fuga magni itaque quo corporis unde at voluptates necessitatibus, ipsam quidem obcaecati in dignissimos, temporibus recusandae eius.
+    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ducimus architecto deserunt nobis eos ab placeat cumque ad at, tenetur illo facilis saepe soluta. Eveniet explicabo, omnis voluptates vitae id nihil?
+    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Exercitationem impedit minus autem maiores assumenda fugiat doloribus nemo aut, atque, quasi expedita. Totam aliquam incidunt repellendus nisi illo possimus exercitationem molestiae!
+    </p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, maxime. Delectus nemo fuga nobis. Sit, architecto. Architecto, impedit! Iusto, voluptatibus? Similique quibusdam ipsa quisquam saepe animi dicta adipisci sint delectus.
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur tenetur amet mollitia sunt fuga magni itaque quo corporis unde at voluptates necessitatibus, ipsam quidem obcaecati in dignissimos, temporibus recusandae eius.
+    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ducimus architecto deserunt nobis eos ab placeat cumque ad at, tenetur illo facilis saepe soluta. Eveniet explicabo, omnis voluptates vitae id nihil?
+    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Exercitationem impedit minus autem maiores assumenda fugiat doloribus nemo aut, atque, quasi expedita. Totam aliquam incidunt repellendus nisi illo possimus exercitationem molestiae!
+    </p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, maxime. Delectus nemo fuga nobis. Sit, architecto. Architecto, impedit! Iusto, voluptatibus? Similique quibusdam ipsa quisquam saepe animi dicta adipisci sint delectus.
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur tenetur amet mollitia sunt fuga magni itaque quo corporis unde at voluptates necessitatibus, ipsam quidem obcaecati in dignissimos, temporibus recusandae eius.
+    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ducimus architecto deserunt nobis eos ab placeat cumque ad at, tenetur illo facilis saepe soluta. Eveniet explicabo, omnis voluptates vitae id nihil?
+    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Exercitationem impedit minus autem maiores assumenda fugiat doloribus nemo aut, atque, quasi expedita. Totam aliquam incidunt repellendus nisi illo possimus exercitationem molestiae!
+    </p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, maxime. Delectus nemo fuga nobis. Sit, architecto. Architecto, impedit! Iusto, voluptatibus? Similique quibusdam ipsa quisquam saepe animi dicta adipisci sint delectus.
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur tenetur amet mollitia sunt fuga magni itaque quo corporis unde at voluptates necessitatibus, ipsam quidem obcaecati in dignissimos, temporibus recusandae eius.
+    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ducimus architecto deserunt nobis eos ab placeat cumque ad at, tenetur illo facilis saepe soluta. Eveniet explicabo, omnis voluptates vitae id nihil?
+    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Exercitationem impedit minus autem maiores assumenda fugiat doloribus nemo aut, atque, quasi expedita. Totam aliquam incidunt repellendus nisi illo possimus exercitationem molestiae!
+    </p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, maxime. Delectus nemo fuga nobis. Sit, architecto. Architecto, impedit! Iusto, voluptatibus? Similique quibusdam ipsa quisquam saepe animi dicta adipisci sint delectus.
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur tenetur amet mollitia sunt fuga magni itaque quo corporis unde at voluptates necessitatibus, ipsam quidem obcaecati in dignissimos, temporibus recusandae eius.
+    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ducimus architecto deserunt nobis eos ab placeat cumque ad at, tenetur illo facilis saepe soluta. Eveniet explicabo, omnis voluptates vitae id nihil?
+    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Exercitationem impedit minus autem maiores assumenda fugiat doloribus nemo aut, atque, quasi expedita. Totam aliquam incidunt repellendus nisi illo possimus exercitationem molestiae!
+    </p>
 </body>
 </html>
