--- a/DESAFIOS PROPOSTOS/Desafio014/Tabela.html
+++ b/DESAFIOS PROPOSTOS/Desafio014/Tabela.html
@@ -18,7 +18,6 @@
         }
         thead {
             background-color: darkgrey;
-            color: white;
         }
         td, th {
             border: 1px solid gray;
@@ -40,7 +39,9 @@
                 <th>Média</th>
             </tr>
             <tr>
-                <td>Exatas</td>
+                <td rowspan="3">Exatas</td>
+                <th>Matemática</th>
+                <th>Física</th>
 
             </tr>
         </thead>
